--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
+    "docusaurus": "^1.14.7",
     "file-loader": "^6.2.0",
     "node": "^17.3.0",
     "prism-react-renderer": "^1.2.1",
@@ -46,5 +47,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {}
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mikikiv/docu-taylerandmikey.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mikikiv/docu-taylerandmikey/issues"
+  },
+  "homepage": "https://github.com/mikikiv/docu-taylerandmikey#readme"
 }
