--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@cmfcmf/docusaurus-search-local": "^0.9.2",
     "@docusaurus/core": "2.0.0-beta.6",
     "@docusaurus/preset-classic": "2.0.0-beta.6",
     "@mdx-js/react": "^1.6.21",
@@ -54,5 +55,8 @@
   "bugs": {
     "url": "https://github.com/mikikiv/docu-taylerandmikey/issues"
   },
-  "homepage": "https://github.com/mikikiv/docu-taylerandmikey#readme"
+  "homepage": "https://github.com/mikikiv/docu-taylerandmikey#readme",
+  "devDependencies": {
+    "coffee-script": "^1.12.7"
+  }
 }
